# Thumbnail_Creator

./: CMakeLists.txt  Outcome.md  Plan.md  QUICKSTART.md  README.md  download_headers.ps1  download_headers.sh  run.bat  run.txt
src/: duplicate_detector.cpp  duplicate_detector.h  hash_calculator.cpp  hash_calculator.h  image_processor.cpp  image_processor.h  main.cpp  performance_tracker.cpp  performance_tracker.h
